--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@beetcb/sstore": "^0.3.0",
-    "dns": "file:dns",
-    "fs": "file:fs",
-    "js-md5": "^0.7.3",
+    "tls": "file:tls",
     "net": "file:net",
+    "fs": "file:fs",
+    "@beetcb/sstore": "^0.3.0",
+    "js-md5": "^0.7.3",
     "next": "^13.4.7",
-    "pg": "^8.11.0",
-    "pg-native": "file:pg-native",
+    "postgres": "^3.3.5",
     "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tls": "file:tls"
+    "react-dom": "^18.2.0"
   }
 }
